Add ftpOptions to appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,16 +2,22 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=MyGarden;User Id=sa;Password=1234;"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "JwtIssuerOptions": {
-      "Issuer": "MyGardenAPI",
-      "Audience": "https://api.tavsogmatias.com/"
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "JwtIssuerOptions": {
+    "Issuer": "MyGardenAPI",
+    "Audience": "https://api.tavsogmatias.com/"
+  },
+  "FtpOptions": {
+    "FtpAddress ": "nt45.unoeuro.com",
+    "Port": "21",
+    "Username": "tavsogmatias.com",
+    "Password": "tc2Dpyhwmk54Rxb3fdga"
+  },
+  "AllowedHosts": "*"
+}
