--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,13 +12,12 @@
     },
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7244;http://localhost:5131"
+      "applicationUrl": "https://localhost:5000;https://192.168.0.100:5000"
     },
     "IIS Express": {
       "commandName": "IISExpress",
