--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MyGarden;User Id=sa;Password=1234;"
+    "DefaultConnection": "Server=localhost;Database=MyGarden;User Id=sa;Password=1234;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
