Fix issue with jwt credentials Add default data to startup

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,22 @@
   },
   "JwtIssuerOptions": {
     "Issuer": "MyGardenAPI",
-    "Audience": "https://api.tavsogmatias.com/"
+    "Audience": "https://api.tavsogmatias.com/",
+    "SecretKey": "jtNCTvIENRTk3JlF1QXEcwu09R81T6MJ",
+  },
+  "SimpleSmtpOptions": {
+    "Host": "websmtp.simply.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "DefaultFromEmail": "info@tavsogmatias.com",
+    "DefaultFromName": "TavsOgMatias",
+    "UserName": "info@tavsogmatias.com",
+    "Password": ",\"!3FqKJcV:=m??bjoD!o.@h71~6+%mtZTrb5UxR/u7X`Y"
+  },
+  "SiteOptions": {
+    "FrontEndUrl": "tavsogmatias.com",
+    "AdminEmailAdresses": [ "admin@tavsogmatias.com" ],
+    "ContactEmailAddress": "contact@tavsogmatias.com"
   },
   "FtpOptions": {
     "FtpAddress ": "nt45.unoeuro.com",
