Getting API to work on live system

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MyGarden;User Id=sa;Password=1234;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=MyGarden;User Id=sa;Password=1234;TrustServerCertificate=True;",
+    //"DefaultConnection": "Server=mssql1.unoeuro.com,1433;Database=tavsogmatias_com_db_my_garden;User Id=tavsogmatias_com;Password=tc2Dpyhwmk54Rxb3fdga;TrustServerCertificate=True;",
   },
   "Logging": {
     "LogLevel": {
