Add migration for missing IsDisbaled on Garden Add endpoint to return all gardens a user has access to

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
   "JwtIssuerOptions": {
     "Issuer": "MyGardenAPI",
     "Audience": "https://api.tavsogmatias.com/",
-    "SecretKey": "jtNCTvIENRTk3JlF1QXEcwu09R81T6MJ",
+    "SecretKey": "jtNCTvIENRTk3JlF1QXEcwu09R81T6MJ"
   },
   "SimpleSmtpOptions": {
     "Host": "websmtp.simply.com",
