--- a/appsettings.production.json
+++ b/appsettings.production.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=mssql16.unoeuro.com,1433;Database=tavsogmatias_com_db_my_garden;User Id=tavsogmatias_com;Password=tc2Dpyhwmk54Rxb3fdga;TrustServerCertificate=True;"
   },
   "SimpleSmtpOptions": {
-    "Host": "websmtp.simply.com",
+    "Host": "smtp.simply.com",
     "Port": 587,
     "EnableSsl": true,
     "DefaultFromEmail": "info@tavsogmatias.com",
