Add smtp service options to configuration - Change login options for smtp

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,10 +19,10 @@
     "Host": "websmtp.simply.com",
     "Port": 587,
     "EnableSsl": true,
-    "DefaultFromEmail": "info@tavsogmatias.com",
+    "DefaultFromEmail": "newAccount@tavsogmatias.com",
     "DefaultFromName": "TavsOgMatias",
-    "UserName": "info@tavsogmatias.com",
-    "Password": ",\"!3FqKJcV:=m??bjoD!o.@h71~6+%mtZTrb5UxR/u7X`Y"
+    "UserName": "newAccount@tavsogmatias.com",
+    "Password": "myGardenMail"
   },
   "SiteOptions": {
     "FrontEndUrl": "tavsogmatias.com",
