--- a/appsettings.production.json
+++ b/appsettings.production.json
@@ -3,13 +3,13 @@
     "DefaultConnection": "Server=mssql16.unoeuro.com,1433;Database=tavsogmatias_com_db_my_garden;User Id=tavsogmatias_com;Password=tc2Dpyhwmk54Rxb3fdga;TrustServerCertificate=True;"
   },
   "SimpleSmtpOptions": {
-    "Host": "smtp.simply.com",
+    "Host": "websmtp.simply.com",
     "Port": 587,
     "EnableSsl": true,
-    "DefaultFromEmail": "info@tavsogmatias.com",
+    "DefaultFromEmail": "newAccount@tavsogmatias.com",
     "DefaultFromName": "TavsOgMatias",
-    "UserName": "info@tavsogmatias.com",
-    "Password": ",\"!3FqKJcV:=m??bjoD!o.@h71~6+%mtZTrb5UxR/u7X`Y"
+    "UserName": "newAccount@tavsogmatias.com",
+    "Password": "myGardenMail"
   },
   "SiteOptions": {
     "FrontEndUrl": "tavsogmatias.com",
